--- a/public/index.html
+++ b/public/index.html
@@ -31,11 +31,11 @@
 
     h1 {
       margin-top: 0;
-      color: #ff9800;
+      color: #ffffff;
     }
 
     footer {
-      background-color: #039be5;
+      background-color: #9603e5;
       color: white;
       text-align: center;
       padding: 15px;
@@ -69,7 +69,7 @@
   </main>
 
   <footer>
-    &copy; 2026 David Moran
+    &copy; 2026 David Moran, Examen P3 Pruebas de Software
   </footer>
 
 </body>
