aumento de Firebase

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     }
 
     header {
-      background-color: #039be5;
+      background-color: #9603e5;
       color: white;
       padding: 20px;
       text-align: center;
